--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" type="text/css" href="reset.css">
 		<link rel="stylesheet" type="text/css" href="index.css">
+		<link rel= "main" href="mains.js">
 
 	</head>
 	<body>
 		<header>
 			<div class="container">
-				<h1> Nutrição</h1>
+				<h1 class="nutrições" >Nutrição</h1>
 			</div>
 		</header>
 		<main>
 			<section class="container">
-				<h2>Meus Pacientes</h2>
+				<h2 class= "pessoas">Meus Pacientes</h2>
 				<table>
 					<thead>
 						<tr>
@@ -28,7 +29,7 @@
 						</tr>
 					</thead>
 					<tbody id="tabela-pacientes">
-						<tr class="paciente" >
+						<tr class="paciente" id="primeiro-paciente" >
 							<td class="info-nome">Paulo</td>
 							<td class="info-peso">100</td>
 							<td class="info-altura">2.00</td>
@@ -42,7 +43,7 @@
 							<td class="info-altura">1.72</td>
 							<td class="info-gordura">40</td>
 							<td class="info-imc">0</td>
-						</tr>
+	                    </tr>
 
 						<tr class="paciente" >
 							<td class="info-nome">Erica</td>
@@ -71,16 +72,7 @@
 
 			</section>
 		</main>
-        <script>
-		var pacientes = document.querySelector("h2");
-	    pacientes.textContent = "Meus Pacientes";
-		var aparecida = document.querySelector("title");
-		aparecida.textContent = "Mariazinha nutrições";
-		var Nutrição = document.querySelector("h1");
-		Nutrição. textContent = "Apenas nutrições";
-     	  </script>
-		 
-
-
+        <script src= "main.js"> </script>
+		
 	</body>
 </html>
