--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
-		<title>Aparecida Nutrição</title>
+		<title>Mariazinha nutrições</title>
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" type="text/css" href="reset.css">
 		<link rel="stylesheet" type="text/css" href="index.css">
@@ -29,7 +29,7 @@
 						</tr>
 					</thead>
 					<tbody id="tabela-pacientes">
-						<tr class="paciente" id="primeiro-paciente" >
+						<tr class="paciente" id=".paciente" >
 							<td class="info-nome">Paulo</td>
 							<td class="info-peso">100</td>
 							<td class="info-altura">2.00</td>
@@ -38,7 +38,7 @@
 						</tr>
 
 						<tr class="paciente" >
-							<td class="info-nome">João</td>
+							<td class="info-nome" id="segundo-paciente">João</td>
 							<td class="info-peso">80</td>
 							<td class="info-altura">1.72</td>
 							<td class="info-gordura">40</td>
@@ -46,7 +46,7 @@
 	                    </tr>
 
 						<tr class="paciente" >
-							<td class="info-nome">Erica</td>
+							<td class="info-nome" id="terceiro-paciente">Erica</td>
 							<td class="info-peso">54</td>
 							<td class="info-altura">1.64</td>
 							<td class="info-gordura">14</td>
@@ -54,14 +54,14 @@
 						</tr>
 
 						<tr class="paciente">
-							<td class="info-nome">Douglas</td>
+							<td class="info-nome" id="quarto-paciente">Douglas</td>
 							<td class="info-peso">85</td>
 							<td class="info-altura">1.73</td>
 							<td class="info-gordura">24</td>
 							<td class="info-imc">0</td>
 						</tr>
 						<tr class="paciente" >
-							<td class="info-nome">Tatiana</td>
+							<td class="info-nome" id="quinto-paciente">Tatiana</td>
 							<td class="info-peso">46</td>
 							<td class="info-altura">1.55</td>
 							<td class="info-gordura">19</td>
