--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
-		<title>Mariazinha nutrições</title>
+		<title>Aparecida Nutrição</title>
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
-		<link rel="stylesheet" type="text/css" href="reset.css">
-		<link rel="stylesheet" type="text/css" href="index.css">
-		<link rel= "main" href="mains.js">
-
+		<link rel="stylesheet" type="text/css" href="css/reset.css">
+		<link rel="stylesheet" type="text/css" href="css/index.css">
+		
+		
 	</head>
 	<body>
 		<header>
 			<div class="container">
-				<h1 class="nutrições" >Nutrição</h1>
+				<h1 class= "titulo">Aparecida Nutrição</h1>
 			</div>
 		</header>
 		<main>
 			<section class="container">
-				<h2 class= "pessoas">Meus Pacientes</h2>
+				<h2 class="subtitulo">Meus Clientes</h2>
 				<table>
 					<thead>
 						<tr>
@@ -29,7 +29,7 @@
 						</tr>
 					</thead>
 					<tbody id="tabela-pacientes">
-						<tr class="paciente" id=".paciente" >
+						<tr class="paciente"  id="primeiro-paciente">
 							<td class="info-nome">Paulo</td>
 							<td class="info-peso">100</td>
 							<td class="info-altura">2.00</td>
@@ -37,31 +37,31 @@
 							<td class="info-imc">0</td>
 						</tr>
 
-						<tr class="paciente" >
-							<td class="info-nome" id="segundo-paciente">João</td>
+						<tr class="paciente"  id="segundo-paciente">
+							<td class="info-nome">João</td>
 							<td class="info-peso">80</td>
 							<td class="info-altura">1.72</td>
 							<td class="info-gordura">40</td>
 							<td class="info-imc">0</td>
-	                    </tr>
+						</tr>
 
-						<tr class="paciente" >
-							<td class="info-nome" id="terceiro-paciente">Erica</td>
+						<tr class="paciente" id="terceiro-paciente">
+							<td class="info-nome">Erica</td>
 							<td class="info-peso">54</td>
 							<td class="info-altura">1.64</td>
 							<td class="info-gordura">14</td>
 							<td class="info-imc">0</td>
 						</tr>
 
-						<tr class="paciente">
-							<td class="info-nome" id="quarto-paciente">Douglas</td>
+						<tr class="paciente"id="quarto-paciente">
+							<td class="info-nome">Douglas</td>
 							<td class="info-peso">85</td>
 							<td class="info-altura">1.73</td>
 							<td class="info-gordura">24</td>
 							<td class="info-imc">0</td>
 						</tr>
-						<tr class="paciente" >
-							<td class="info-nome" id="quinto-paciente">Tatiana</td>
+						<tr class="paciente" id="quinto-paciente">
+							<td class="info-nome">Tatiana</td>
 							<td class="info-peso">46</td>
 							<td class="info-altura">1.55</td>
 							<td class="info-gordura">19</td>
@@ -72,7 +72,7 @@
 
 			</section>
 		</main>
-        <script src= "main.js"> </script>
-		
+
+		<script src= "js/main.js"></script>
 	</body>
 </html>
