--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" type="text/css" href="reset.css">
 		<link rel="stylesheet" type="text/css" href="index.css">
-		
-		
 	</head>
 	<body>
 		<header>
@@ -36,7 +34,6 @@
 							<td class="info-gordura">10</td>
 							<td class="info-imc">0</td>
 						</tr>
-
 						<tr class="paciente"  id="segundo-paciente">
 							<td class="info-nome">João</td>
 							<td class="info-peso">80</td>
@@ -44,7 +41,6 @@
 							<td class="info-gordura">40</td>
 							<td class="info-imc">0</td>
 						</tr>
-
 						<tr class="paciente" id="terceiro-paciente">
 							<td class="info-nome">Erica</td>
 							<td class="info-peso">54</td>
@@ -52,7 +48,6 @@
 							<td class="info-gordura">14</td>
 							<td class="info-imc">0</td>
 						</tr>
-
 						<tr class="paciente"id="quarto-paciente">
 							<td class="info-nome">Douglas</td>
 							<td class="info-peso">85</td>
@@ -69,7 +64,6 @@
 						</tr>
 					</tbody>
 				</table>
-
 			</section>
 			<section class="container">
 				<h2 id="titulo-form">Adicionar novo paciente</h2>
@@ -90,12 +84,11 @@
 						<label for="gordura">% de Gordura:</label>
 						<input id="gordura" type="text" placeholder="digite a porcentagem de gordura do seu paciente" class="campo campo-medio">
 					</div>
-			
 					<button id="adicionar-paciente" class="botao bto-principal">Adicionar</button>
 				</form>
 			</section>
 		</main>
-
-		<script src= "main.js"></script>
+		<script src= "calcular_IMC.js"></script>
+		<script src= "formulario.js"></script>
 	</body>
 </html>
